<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<!--
     Copyright (c) 2012, 2018, Werner Keil, Anatole Tresch and others.

     Licensed under the Apache License, Version 2.0 (the "License"); you may not
     use this file except in compliance with the License. You may obtain a copy of
     the License at

     http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
     WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
     License for the specific language governing permissions and limitations under
     the License.

     Contributors: @atsticks, @keilw, @otjava, @manuela-grindei
    -->
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.javamoney.lib</groupId>
		<artifactId>javamoney-exchange</artifactId>
		<version>1.0</version>
	</parent>
	<artifactId>javamoney-exchange-rate-yahoo</artifactId>
	<packaging>jar</packaging>

	<name>JavaMoney Exchange Yahoo Rate Provider</name>

	<build>
		<plugins>
			<plugin>
				<groupId>com.googlecode.maven-download-plugin</groupId>
				<artifactId>download-maven-plugin</artifactId>
				<configuration>
					<uri>https://finance.yahoo.com/webservice/v1/symbols/allcurrencies/quote</uri>
					<overwrite>true</overwrite>
					<outputDirectory>src/main/resources/java-money/defaults/YAHOO</outputDirectory>
					<outputFileName>finance.xml</outputFileName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>9</source>
					<target>9</target>
				</configuration>
				<executions>
					<execution>
						<id>default-compile</id>
						<configuration>
							<!-- compile everything to ensure module-info contains right entries -->
							<!-- required when JAVA_HOME is JDK 8 or below -->
							<jdkToolchain>
								<version>9</version>
							</jdkToolchain>
							<release>9</release>
						</configuration>
					</execution>
					<execution>
						<id>base-compile</id>
						<goals>
							<goal>compile</goal>
						</goals>
						<!-- recompile everything for target VM except the module-info.java -->
						<configuration>
							<source>${maven.compile.sourceLevel}</source>
							<target>${maven.compile.targetLevel}</target>
							<excludes>
								<exclude>module-info.java</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
        </plugins>
	</build>

	<dependencies>
		<!-- API and RI -->
		<dependency>
			<groupId>javax.money</groupId>
			<artifactId>money-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.javamoney.moneta</groupId>
			<artifactId>moneta-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.javamoney.moneta</groupId>
			<artifactId>moneta-convert</artifactId>
		</dependency>

		<!-- OSGI support -->
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.annotation</artifactId>
			<scope>provided</scope>
			<version>${osgi.annotation.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.compendium</artifactId>
			<scope>provided</scope>
			<version>${osgi.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>${osgi.version}</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
		<!-- Testing -->
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
